Use dialog in daily rewards, cleanup