@@ -1,25 +1,27 @@
 package gg.projecteden.nexus.features.dailyrewards;
 
+import gg.projecteden.api.common.exceptions.EdenException;
 import gg.projecteden.api.common.utils.Nullables;
-import gg.projecteden.nexus.Nexus;
 import gg.projecteden.nexus.features.menus.ColorSelectMenu;
-import gg.projecteden.nexus.features.menus.MenuUtils.ConfirmationMenu;
+import gg.projecteden.nexus.features.menus.MenuUtils;
 import gg.projecteden.nexus.features.menus.api.ClickableItem;
-import gg.projecteden.nexus.features.menus.api.SignMenuFactory;
 import gg.projecteden.nexus.features.menus.api.annotations.Rows;
 import gg.projecteden.nexus.features.menus.api.annotations.Title;
 import gg.projecteden.nexus.features.menus.api.content.InventoryProvider;
-import gg.projecteden.nexus.features.resourcepack.ResourcePack.ResourcePackNumber;
+import gg.projecteden.nexus.features.resourcepack.models.ItemModelType;
 import gg.projecteden.nexus.models.banker.BankerService;
 import gg.projecteden.nexus.models.banker.Transaction.TransactionCause;
 import gg.projecteden.nexus.models.dailyreward.DailyRewardUser;
 import gg.projecteden.nexus.models.dailyreward.DailyRewardUserService;
 import gg.projecteden.nexus.models.dailyreward.Reward;
+import gg.projecteden.nexus.models.nerd.Nerd;
 import gg.projecteden.nexus.models.shop.Shop.ShopGroup;
 import gg.projecteden.nexus.models.voter.VoterService;
-import gg.projecteden.nexus.utils.ColorType;
+import gg.projecteden.nexus.utils.DialogUtils.DialogBuilder;
+import gg.projecteden.nexus.utils.DialogUtils.MultiActionDialogBuilder;
 import gg.projecteden.nexus.utils.IOUtils;
 import gg.projecteden.nexus.utils.ItemBuilder;
+import gg.projecteden.nexus.utils.JsonBuilder;
 import gg.projecteden.nexus.utils.PlayerUtils;
 import gg.projecteden.nexus.utils.StringUtils;
 import lombok.RequiredArgsConstructor;
@@ -33,43 +35,40 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static net.minecraft.util.StringUtil.isNullOrEmpty;
-
 @Title("&3Daily Rewards")
 @RequiredArgsConstructor
-public class DailyRewardsMenu extends InventoryProvider {
+public class DailyRewardsMenu {
 	private static final String PREFIX = StringUtils.getPrefix("DailyRewards");
-	private static final int MAX_DAY = DailyRewardsFeature.getMaxDays();
+	public static final int MAX_DAY = DailyRewardsFeature.getMaxDays();
 
-	private final DailyRewardUser user;
+	public void open(Player player) {
+		MultiActionDialogBuilder builder = new DialogBuilder()
+			.title("&6Daily Rewards")
+			.multiAction();
 
-	@Override
-	public void init() {
-		addCloseItem();
-
-		List<ClickableItem> items = new ArrayList<>();
+		var user = new DailyRewardUserService().get(player.getPlayer());
 
 		for (int i = 1; i <= Math.max(MAX_DAY, user.getCurrentStreak().getStreak()); i++) {
 			final int day = i;
+			final int width = 25;
 			if (user.getCurrentStreak().canClaim(day))
 				if (user.getCurrentStreak().hasClaimed(day))
-					items.add(ClickableItem.empty(ResourcePackNumber.of(day, ColorType.GRAY).get()
-						.name("&eDay " + day)
-						.lore("&3Claimed")
-						.build()));
+					builder.button("&7" + day, "&7Claimed", width, response -> {});
 				else
-					items.add(ClickableItem.of(ResourcePackNumber.of(day, ColorType.GREEN).get()
-						.name("&eDay " + day)
-						.lore("&6&lUnclaimed", "&3Click to select reward.")
-						.build(), e -> new SelectItemMenu(user, day, contents.pagination().getPage()).open(viewer)));
+					builder.button(
+						new JsonBuilder("&a" + day),
+						new JsonBuilder("&aUnclaimed").newline().next("&3Click to select reward."),
+						width,
+						response -> new SelectItemMenu(user, day).open(response.getPlayer())
+					);
 			else
-				items.add(ClickableItem.empty(ResourcePackNumber.of(day, ColorType.RED).get()
-					.name("&eDay " + day)
-					.lore("&cLocked")
-					.build()));
+				builder.button("&c" + day, "&cLocked", width);
 		}
 
-		paginate(items);
+		builder
+			.exitButton("Close")
+			.columns(15)
+			.open(player);
 	}
 
 	@Rows(3)
@@ -77,17 +76,15 @@ public class DailyRewardsMenu extends InventoryProvider {
 	public static class SelectItemMenu extends InventoryProvider {
 		private final DailyRewardUser user;
 		private final int day;
-		private final int page;
 
-		public SelectItemMenu(DailyRewardUser user, int day, int page) {
+		public SelectItemMenu(DailyRewardUser user, int day) {
 			this.user = user;
 			this.day = day;
-			this.page = page;
 		}
 
 		@Override
 		public void init() {
-			addBackItem(e -> new DailyRewardsMenu(user).open(user.getOnlinePlayer(), page));
+			addBackItem(e -> new DailyRewardsMenu().open(user.getOnlinePlayer()));
 
 			List<Reward> rewards = DailyRewardsFeature.getRewards(day);
 
@@ -98,7 +95,7 @@ public class DailyRewardsMenu extends InventoryProvider {
 
 				ItemBuilder item;
 				if (!Nullables.isNullOrEmpty(currentReward.getItems()))
-					item = new ItemBuilder(currentReward.getItems().get(0).clone()).name(rewardDescription).lore("&3Click to claim");
+					item = new ItemBuilder(currentReward.getItems().getFirst().clone()).name(rewardDescription).lore("&3Click to claim");
 				else
 					item = new ItemBuilder(Material.PAPER).name(rewardDescription).lore("&3Click to claim").glow();
 
@@ -125,25 +122,9 @@ public class DailyRewardsMenu extends InventoryProvider {
 						new ColorSelectMenu(clone.getType(), itemClickData -> {
 							PlayerUtils.giveItem(player, new ItemStack(itemClickData.getItem().getType(), clone.getAmount()));
 							saveAndReturn(day);
-							player.closeInventory();
 						}).open(player);
 					} else if (Reward.RequiredSubmenu.NAME.contains(clone.getType())) {
-						Nexus.getSignMenuFactory()
-							.lines("", SignMenuFactory.ARROWS, "Enter a", "player's name")
-							.prefix(PREFIX)
-							.response(lines -> {
-								if (isNullOrEmpty(lines[0]))
-									open(player, page);
-								else
-									ConfirmationMenu.builder()
-										.title("Claim " + lines[0] + "'s head?")
-										.onCancel(e -> open(player, page))
-										.onConfirm(e -> {
-											PlayerUtils.giveItem(player, new ItemBuilder(Material.PLAYER_HEAD).skullOwner(lines[0]).amount(clone.getAmount()).build());
-											saveAndReturn(day);
-										})
-										.open(player);
-							}).open(player);
+						showPlayerHeadMenu(this);
 					} else {
 						PlayerUtils.giveItem(player, clone);
 						saveAndReturn(day);
@@ -178,7 +159,7 @@ public class DailyRewardsMenu extends InventoryProvider {
 		public void saveAndReturn(int day) {
 			user.getCurrentStreak().claim(day);
 			new DailyRewardUserService().save(user);
-			new DailyRewardsMenu(user).open(user.getOnlinePlayer(), page);
+			new DailyRewardsMenu().open(user.getOnlinePlayer());
 		}
 
 		public void log(int choice) {
@@ -191,6 +172,45 @@ public class DailyRewardsMenu extends InventoryProvider {
 			));
 
 			IOUtils.csvAppend("daily-rewards", String.join(",", columns));
+		}
+
+		public void showPlayerHeadMenu(SelectItemMenu menu) {
+			showPlayerHeadMenu(menu, null);
+		}
+
+		public void showPlayerHeadMenu(SelectItemMenu menu, String errorMessage) {
+			new DialogBuilder()
+				.title("Daily Rewards Player Head")
+				.bodyText("Enter a player's name to receive their head")
+				.inputText("username", errorMessage)
+				.confirmation()
+				.onCancel(menu::open)
+				.onSubmit(response -> {
+					try {
+						Nerd nerd = PlayerUtils.getPlayer(response.getText("username"));
+						ItemStack head = new ItemBuilder(Material.PLAYER_HEAD).skullOwner(nerd).build();
+
+						new DialogBuilder()
+							.title("Daily Rewards Player Head")
+							.bodyText("Claim " + nerd.getNickname() + "'s head?")
+							.bodyItem(new ItemBuilder(head).model(ItemModelType.GUI_PLAYER_HEAD).build())
+							.bodyBlankLines(5)
+							.confirmation()
+							.submitText("Yes!")
+							.cancelText("Go back")
+							.onCancel(player -> showPlayerHeadMenu(menu))
+							.onSubmit(response2 -> {
+								PlayerUtils.giveItem(viewer, head);
+								saveAndReturn(menu.day);
+							})
+							.open(response.getPlayer());
+					} catch (EdenException ex) {
+						showPlayerHeadMenu(menu, "&c" + ex.getMessage());
+					} catch (Exception ex) {
+						MenuUtils.handleException(response.getPlayer(), DailyRewardsMenu.PREFIX, ex);
+					}
+				})
+				.open(viewer);
 		}
 
 	}
